FINISHED job/education modals. You can now create, edit, update your job or education that you have on your profile.

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aspire</title>
+    <title>Ethearnal</title>
     <!-- START of LINKS-->
     <!-- Normalize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css">
@@ -57,7 +57,7 @@
             </div>
             <div class="modal-body">
               <div class="form-group">
-                <input id="input-image-job" type="file" placeholder="Add image or video" class="input-file">
+                <input id="input-image-job" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
                 <label for="input-image-job">Add Company's Logo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image"><img id="input-image-job" src="#" alt="Preview">
               </div>
               <div class="modal-inputs">
@@ -173,7 +173,7 @@
                 <label for="input-image-job">Add Educational Institution Logo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image"><img id="input-image-job" src="#" alt="Preview">
               </div>
               <div class="modal-inputs">
-                <form id="form-update-job" action="POST">
+                <form id="form-update-education" action="POST">
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                     <input id="education-name" name="education-name" type="text" class="mdl-textfield__input">
                     <label for="education-name" class="mdl-textfield__label">Educational Institution name</label>
@@ -199,8 +199,8 @@
             </div>
             <div class="modal-footer">
               <button class="mdl-button mdl-js-button close-button">Close</button>
-              <button id="publish" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Publish</button>
-              <div data-mdl-for="publish" class="mdl-tooltip">This text will be changed anyway.</div>
+              <button id="publish1" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Publish</button>
+              <div data-mdl-for="publish1" class="mdl-tooltip">This text will be changed anyway.</div>
             </div>
           </div>
         </div>
@@ -229,7 +229,7 @@
                 <label for="input-image-job">Add Educational Institution Logo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image"><img id="input-image-job" src="#" alt="Preview">
               </div>
               <div class="modal-inputs">
-                <form id="form-update-job" action="POST">
+                <form id="form-update-education" action="POST">
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                     <input id="education-name" name="education-name" type="text" class="mdl-textfield__input">
                     <label for="education-name" class="mdl-textfield__label">Educational Institution name</label>
@@ -255,8 +255,8 @@
             </div>
             <div class="modal-footer">
               <button class="mdl-button mdl-js-button close-button">Close</button>
-              <button id="update" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
-              <div data-mdl-for="update" class="mdl-tooltip">This text will be changed anyway.</div>
+              <button id="update1" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
+              <div data-mdl-for="update1" class="mdl-tooltip">This text will be changed anyway.</div>
             </div>
           </div>
         </div>
