--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- END of LINKS-->
   </head>
-  <body style="margin-top: -59px">
+  <body>
     <div id="add-job" class="add modal-box flex floating">
       <div class="modal-box-content">
         <div class="inner-modal">
@@ -592,7 +592,7 @@
               <button type="button" data-toggle="collapse" data-target="#navigation" aria-expanded="false" class="navbar-toggle collapsed"><span></span><span></span><span></span><span></span></button>
             </div><a href="" class="navbar-brand hidden-xs">Ethearnal BETA</a>
             <form action="#" style="float: left; max-height: 62px;">
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label navigation-search-bar">
                 <label for="search-header" class="mdl-button mdl-js-button mdl-button--icon"><i class="material-icons">search</i></label>
                 <div class="mdl-textfield__expandable-holder">
                   <input id="search-header" type="text" class="mdl-textfield__input">
@@ -604,8 +604,9 @@
           <!-- Navbar items ONLY for larger than mobile screens.-->
           <div id="navigation" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right hidden-xs">
-              <li style="margin-right: 25px; margin-top: 2px" class="asset"><a href="/ui/gigs.html">Gigs</a></li>
-              <li style="margin-right: 50px; margin-top: 2px" class="asset"><a href="/ui/jobs.html">Jobs</a></li>
+              <li class="asset text"><a href="" load="gigs">Gigs</a></li>
+              <li class="asset text"><a href="" load="jobs">Jobs</a></li>
+              <li class="asset text"><a href="" load="profiles">Profiles</a></li>
               <li id="comment-navbar" class="asset"><a href=""><i class="icon-comment"></i>
                   <div class="round-number"><span>1</span></div></a></li>
               <li id="alert-navbar" class="asset"><a id="reputation-dropdown" data-toggle="dropdown"><i class="material-icons">polymer</i>
@@ -621,7 +622,7 @@
               </li>
               <!-- Settings dropdown-->
               <ul data-labelledby="settings-dropdown" class="dropdown-menu">
-                <li class="view-profile"><a href="/ui">View Profile<i class="material-icons">account_box</i></a></li>
+                <li class="view-profile"><a href="" load="profile">View Profile<i class="material-icons">account_box</i></a></li>
                 <li class="settings"><a href="">Settings<i class="material-icons">settings</i></a></li>
                 <li class="logout"><a href="">Logout<i class="material-icons">power_settings_new</i></a></li>
               </ul>
@@ -641,8 +642,9 @@
         </nav>
       </div>
     </header>
+    <!-- Including {PROFILE} PAGE content-->
     <!-- Background image section, including a button with lock and unlock icons.-->
-    <section class="background-image">
+    <section style="display: none" class="background-image">
       <div class="button-prev"><i class="material-icons">keyboard_arrow_left</i></div>
       <div class="button-next"><i class="material-icons">keyboard_arrow_right</i></div>
       <div class="items">
@@ -652,7 +654,7 @@
       </div>
     </section>
     <!-- This section is for your whole profile, including left and right sides, profile information and etc.-->
-    <section class="documentation">
+    <section style="display: none" class="documentation">
       <div class="container">
         <!-- Profile information including profile image, current work, current city and state, skills and etc.-->
         <div class="profile-information-container col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -728,6 +730,178 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- Including {GIGS} page content-->
+    <section class="gigs-page-content">
+      <div class="container">
+        <div class="filters col-md-3">
+          <div class="filter">
+            <p>Category</p>
+            <label for="checkbox-1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-1" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Development</span>
+            </label>
+            <label for="checkbox-2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-2" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Mobile Development</span>
+            </label>
+            <label for="checkbox-3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-3" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Graphic Design</span>
+            </label>
+            <label for="checkbox-4" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-4" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Content Writing</span>
+            </label>
+            <label for="checkbox-5" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-5" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Accountants</span>
+            </label>
+            <label for="checkbox-6" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-6" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Consultants</span>
+            </label>
+            <label for="checkbox-7" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-7" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Assistants</span>
+            </label>
+          </div>
+          <div class="filter">
+            <p>Job Type</p>
+            <label for="checkbox-8" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-8" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Hourly</span>
+            </label>
+            <label for="checkbox-9" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-9" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Fixed Price</span>
+            </label>
+          </div>
+          <div class="filter">
+            <p>Experience Level</p>
+            <label for="checkbox-10" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-10" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Entry Level</span>
+            </label>
+            <label for="checkbox-11" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-11" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Intermediate</span>
+            </label>
+            <label for="checkbox-12" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-12" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Expert</span>
+            </label>
+          </div>
+          <div class="filter">
+            <p>Budget</p>
+            <div class="rkmd-slider slider-continous slider-shadow slider-lightBlue slider-light">
+              <input type="range" min="0" max="100" value="65">
+            </div>
+            <label for="checkbox-13" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-13" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label"><$100</span>
+            </label>
+            <label for="checkbox-14" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-14" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$100 - $500</span>
+            </label>
+            <label for="checkbox-15" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-15" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$500 - $1k</span>
+            </label>
+            <label for="checkbox-16" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-16" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$1k - $5k</span>
+            </label>
+            <label for="checkbox-17" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-17" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$5k - $50k</span>
+            </label>
+            <label for="checkbox-18" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-18" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$50k+</span>
+            </label>
+          </div>
+        </div>
+        <div class="gigs col-md-9">
+          <div class="gigs-container">
+            <div class="gig"><img src="images/paypal.jpg" alt="Gig">
+              <h5>by FirstName L.</h5>
+              <p>Gig Description</p>
+              <div class="footer">
+                <h4>Starting at <span>$25</span></h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Including {JOBS} page content-->
+    <section style="display: none" class="jobs-page-content">
+      <div class="container">
+        <div class="filters col-md-3">
+          <div class="filter">
+            <p>Category</p>
+            <label for="checkbox-1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-1" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Development</span>
+            </label>
+            <label for="checkbox-2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-2" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Mobile Development</span>
+            </label>
+            <label for="checkbox-3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-3" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Graphic Design</span>
+            </label>
+            <label for="checkbox-4" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-4" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Content Writing</span>
+            </label>
+            <label for="checkbox-5" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-5" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Accountants</span>
+            </label>
+            <label for="checkbox-6" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-6" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Consultants</span>
+            </label>
+            <label for="checkbox-7" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-7" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Assistants</span>
+            </label>
+          </div>
+          <div class="filter">
+            <p>Job Type</p>
+            <label for="checkbox-8" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-8" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Hourly</span>
+            </label>
+            <label for="checkbox-9" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-9" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Fixed Price</span>
+            </label>
+          </div>
+          <div class="filter">
+            <p>Experience Level</p>
+            <label for="checkbox-10" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-10" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Entry Level</span>
+            </label>
+            <label for="checkbox-11" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-11" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Intermediate</span>
+            </label>
+            <label for="checkbox-12" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-12" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Expert</span>
+            </label>
+          </div>
+          <div class="filter">
+            <p>Budget</p>
+            <div class="rkmd-slider slider-continous slider-shadow slider-lightBlue slider-light">
+              <input type="range" min="0" max="100" value="65">
+            </div>
+            <label for="checkbox-13" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-13" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label"><$100</span>
+            </label>
+            <label for="checkbox-14" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-14" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$100 - $500</span>
+            </label>
+            <label for="checkbox-15" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-15" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$500 - $1k</span>
+            </label>
+            <label for="checkbox-16" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-16" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$1k - $5k</span>
+            </label>
+            <label for="checkbox-17" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-17" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$5k - $50k</span>
+            </label>
+            <label for="checkbox-18" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
+              <input id="checkbox-18" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$50k+</span>
+            </label>
+          </div>
+        </div>
+        <div class="jobs col-md-9">
+          <p>Jobs</p>
+        </div>
+      </div>
+    </section>
+    <!-- Including {PROFILES} page content-->
+    <section style="display: none" class="profiles-page-content">
+      <div class="container">
+        <p>Profiles page</p>
       </div>
     </section>
     <!-- jQuery 3.1.1-->
