--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -461,8 +461,8 @@
             </div>
             <div class="modal-body">
               <div class="form-group">
-                <input id="input-image-job" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
-                <label for="input-image-job">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-job"><img id="input-image-job" src="#" alt="">
+                <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
+                <label for="input-image-gig">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-gig"><img id="input-image-gig" src="#" alt="">
               </div>
               <div class="modal-inputs">
                 <form action="POST">
@@ -495,8 +495,8 @@
                     <label for="description" class="mdl-textfield__label">Description (what have you done or currently do?)</label>
                   </div>
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
-                    <input id="budget" type="text" name="budget" class="mdl-textfield__input">
-                    <label for="budget" class="mdl-textfield__label">Price</label><span class="mdl-textfield__error">Input is not a number!</span>
+                    <input id="price" type="text" name="price" class="mdl-textfield__input">
+                    <label for="price" class="mdl-textfield__label">Price</label><span class="mdl-textfield__error">Input is not a number!</span>
                   </div>
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label right-side">
                     <input type="text" name="startDate" class="date-started mdl-textfield__input">
@@ -507,8 +507,80 @@
             </div>
             <div class="modal-footer">
               <button class="mdl-button mdl-js-button close-button">Close</button>
-              <button id="publish" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Publish</button>
-              <div data-mdl-for="publish" class="mdl-tooltip">This text will be changed anyway.</div>
+              <button id="publish4" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Publish</button>
+              <div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="edit-gig" class="edit modal-box flex floating">
+      <div class="modal-box-content">
+        <div class="inner-modal">
+          <div class="content">
+            <div class="modal-header">
+              <h3>Edit Gig</h3>
+            </div>
+            <div class="success-message">
+              <h1 class="title">Congratulations!</h1>
+              <div class="success-content">
+                <p>Your gig was updated.</p>
+              </div>
+              <div class="buttons">
+                <button class="mdl-button mdl-js-button close-button congrats-close">Close the modal to see it</button><span>OR</span>
+                <button class="mdl-button mdl-js-button create-new">edit gig again</button>
+              </div>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
+                <label for="input-image-gig">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-gig"><img id="input-image-gig" src="#" alt="">
+              </div>
+              <div class="modal-inputs">
+                <form action="POST">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
+                    <input id="gig-title" name="gig-title" type="text" class="mdl-textfield__input">
+                    <label for="gig-title" class="mdl-textfield__label">Gig Title</label>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
+                    <select id="category" class="ui dropdown">
+                      <option value="">Select Category</option>
+                      <option value="1">Development</option>
+                      <option value="2">Mobile Development</option>
+                      <option value="3">Graphic Design</option>
+                      <option value="4">Content Writing</option>
+                      <option value="5">Accountants</option>
+                      <option value="6">Consultants</option>
+                      <option value="7">Assistants</option>
+                    </select>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label right-side">
+                    <select id="experience-level" class="ui dropdown">
+                      <option value="">Experience Level</option>
+                      <option value="1">Entry Level</option>
+                      <option value="2">Intermediate</option>
+                      <option value="3">Expert</option>
+                    </select>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield whole-line">
+                    <textarea id="description" type="text" rows="3" name="description" class="mdl-textfield__input"></textarea>
+                    <label for="description" class="mdl-textfield__label">Description (what have you done or currently do?)</label>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
+                    <input id="price" type="text" name="price" class="mdl-textfield__input">
+                    <label for="price" class="mdl-textfield__label">Price</label><span class="mdl-textfield__error">Input is not a number!</span>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label right-side">
+                    <input type="text" name="startDate" class="date-started mdl-textfield__input">
+                    <label for="date-from" class="mdl-textfield__label">Expire Date</label>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button class="mdl-button mdl-js-button close-button">Close</button>
+              <button id="update4" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
+              <div data-mdl-for="update4" class="mdl-tooltip">This text will be changed anyway.</div>
             </div>
           </div>
         </div>
@@ -808,7 +880,12 @@
         </div>
         <div class="gigs col-md-9">
           <div class="gigs-container">
-            <div class="gig"><img src="images/paypal.jpg" alt="Gig">
+            <div class="gig content-block">
+              <button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button--icon dropdown-button"><i class="material-icons">more_vert</i></button>
+              <ul for="dropdowngiga0" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
+                <li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>
+                <li class="mdl-menu__item delete">Delete</li>
+              </ul><img src="images/paypal.jpg" alt="Gig">
               <h5>by FirstName L.</h5>
               <p>Gig Description</p>
               <div class="footer">
