--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -462,7 +462,7 @@
             <div class="modal-body">
               <div class="form-group">
                 <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
-                <label for="input-image-gig">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-gig"><img id="input-image-gig" src="#" alt="">
+                <label for="input-image-gig">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-gig"><img id="input-image-gig" src="#" alt="" class="show-image">
               </div>
               <div class="modal-inputs">
                 <form action="POST">
@@ -534,7 +534,7 @@
             <div class="modal-body">
               <div class="form-group">
                 <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
-                <label for="input-image-gig">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-gig"><img id="input-image-gig" src="#" alt="">
+                <label for="input-image-gig">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-gig"><img id="input-image-gig" src="#" alt="" class="show-image">
               </div>
               <div class="modal-inputs">
                 <form action="POST">
