Gigs page changes for search engine

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -473,8 +473,8 @@
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                     <select id="category" class="ui dropdown">
                       <option value="">Select Category</option>
-                      <option value="1">Development</option>
-                      <option value="2">Mobile Development</option>
+                      <option value="1">Software Development</option>
+                      <option value="2">Entertainment</option>
                       <option value="3">Graphic Design</option>
                       <option value="4">Content Writing</option>
                       <option value="5">Accountants</option>
@@ -545,8 +545,8 @@
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                     <select id="category" class="ui dropdown">
                       <option value="">Select Category</option>
-                      <option value="1">Development</option>
-                      <option value="2">Mobile Development</option>
+                      <option value="1">Software Development</option>
+                      <option value="2">Entertainment</option>
                       <option value="3">Graphic Design</option>
                       <option value="4">Content Writing</option>
                       <option value="5">Accountants</option>
@@ -819,13 +819,13 @@
     <section class="gigs-page-content">
       <div class="container">
         <div class="filters col-md-3">
-          <div class="filter">
+          <div class="filter category">
             <p>Category</p>
             <label for="checkbox-1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-1" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Development</span>
+              <input id="checkbox-1" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Software Development</span>
             </label>
             <label for="checkbox-2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-2" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Mobile Development</span>
+              <input id="checkbox-2" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Entertainment</span>
             </label>
             <label for="checkbox-3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
               <input id="checkbox-3" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Graphic Design</span>
@@ -843,7 +843,7 @@
               <input id="checkbox-7" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Assistants</span>
             </label>
           </div>
-          <div class="filter">
+          <div class="filter job-type">
             <p>Job Type</p>
             <label for="checkbox-8" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
               <input id="checkbox-8" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Hourly</span>
@@ -852,7 +852,7 @@
               <input id="checkbox-9" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Fixed Price</span>
             </label>
           </div>
-          <div class="filter">
+          <div class="filter experience-level">
             <p>Experience Level</p>
             <label for="checkbox-10" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
               <input id="checkbox-10" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Entry Level</span>
@@ -864,7 +864,7 @@
               <input id="checkbox-12" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Expert</span>
             </label>
           </div>
-          <div class="filter">
+          <div class="filter budget">
             <p>Budget</p>
             <div class="rkmd-slider slider-continous slider-shadow slider-lightBlue slider-light">
               <input type="range" min="0" max="100" value="65">
