Changes to search query

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -711,8 +711,8 @@
             </div><a href="" class="navbar-brand hidden-xs">Ethearnal BETA</a>
             <form action="#" style="float: left; max-height: 62px;">
               <div style="margin-left: 25px; margin-top: 10px" class="ui action input">
-                <input id="search-header" type="text" placeholder="Search...">
-                <button class="ui button">Search</button>
+                <input id="search-header" type="text" placeholder="Search gigs...">
+                <button id="search-button" class="ui button">Search</button>
               </div>
             </form>
           </div>
