--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -721,7 +721,7 @@
           <div class="navbar-header">
             <div class="button">
               <button type="button" data-toggle="collapse" data-target="#navigation" aria-expanded="false" class="navbar-toggle collapsed"><span></span><span></span><span></span><span></span></button>
-            </div><a href="" class="navbar-brand hidden-xs">Ethearnal BETA</a>
+            </div><a href="" class="navbar-brand hidden-xs">Ethearnal Alpha</a>
             <form action="#" style="float: left; max-height: 62px;">
               <div style="margin-left: 25px; margin-top: 10px" class="ui action input">
                 <input id="search-header" type="text" placeholder="Search gigs...">
