--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -909,27 +909,59 @@
               <input id="checkbox-12" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Expert</span>
             </label>
           </div>
+          <div style="margin-bottom: 55px" class="filter reputation">
+            <p>Reputation</p>
+            <div class="slider-wrapper-2">
+              <div id="slider-range-2"></div>
+              <div class="range-wrapper-2">
+                <div class="range-2"></div>
+                <div class="range-alert-2"><span>+</span></div>
+                <div class="gear-wrapper-2">
+                  <div class="gear-large-2 gear-one-2">
+                    <div class="gear-tooth-2"></div>
+                    <div class="gear-tooth-2"></div>
+                    <div class="gear-tooth-2"></div>
+                    <div class="gear-tooth-2"></div>
+                  </div>
+                  <div class="gear-large-2 gear-two-2">
+                    <div class="gear-tooth-2"></div>
+                    <div class="gear-tooth-2"></div>
+                    <div class="gear-tooth-2"></div>
+                    <div class="gear-tooth-2"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="marker marker-0"><sup>☦</sup>0</div>
+              <div class="marker marker-50"><sup>☦</sup>2,500</div>
+              <div class="marker marker-100"><sup>☦</sup>5,000</div>
+            </div>
+          </div>
           <div class="filter budget">
             <p>Budget</p>
-            
-            <label for="checkbox-13" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-13" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label"><$100</span>
-            </label>
-            <label for="checkbox-14" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-14" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$100 - $500</span>
-            </label>
-            <label for="checkbox-15" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-15" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$500 - $1k</span>
-            </label>
-            <label for="checkbox-16" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-16" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$1k - $5k</span>
-            </label>
-            <label for="checkbox-17" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-17" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$5k - $50k</span>
-            </label>
-            <label for="checkbox-18" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-18" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$50k+</span>
-            </label>
+            <div class="slider-wrapper">
+              <div id="slider-range"></div>
+              <div class="range-wrapper">
+                <div class="range"></div>
+                <div class="range-alert"><span>+</span></div>
+                <div class="gear-wrapper">
+                  <div class="gear-large gear-one">
+                    <div class="gear-tooth"></div>
+                    <div class="gear-tooth"></div>
+                    <div class="gear-tooth"></div>
+                    <div class="gear-tooth"></div>
+                  </div>
+                  <div class="gear-large gear-two">
+                    <div class="gear-tooth"></div>
+                    <div class="gear-tooth"></div>
+                    <div class="gear-tooth"></div>
+                    <div class="gear-tooth"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="marker marker-0"><sup>$</sup>0</div>
+              <div class="marker marker-50"><sup>$</sup>5,000</div>
+              <div class="marker marker-100"><sup>$</sup>10,000+</div>
+            </div>
           </div>
         </div>
         <div class="gigs col-md-9">
